
	* src/Makevars.win: disable c++0x entirely (for now)

	* src/Rcpp/Environment.h: make sure what() is const. (suncc finding)

	* src/RcppCommon.h: pre declare classes, as an attempt to 
	deal with the suncc warning "RObject may not have a type qualifier."

	* src/Rcpp/*.h: make sure RcppCommon.h is the first included header

	* src/*cpp: make sure foo.cpp only include Rcpp/foo.h

2010-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.3

	* debian/*: Similarly updated for new release to Debian

	* INDEX: updated

	* configure.in: Some more small cleanups

	* inst/skeleton/Makevars.win: Add missing default file

2010-01-21  Romain Francois <francoisromain@free.fr>

	* configure.in: Some small cleanups, add RCPP_CXX0X env var

2010-01-20 Romain Francois <francoisromain@free.fr>

	* src/*: make update private virtual in RObject and couple it with
	setSEXP so that it gets called automatically, instead of manually
	* src/*: move more code depending on c++0x from cpp files to header
	files

2010-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Detect C++ capabilties (via g++ major/minor) via
	  small C++ program embedded in autoconf macro

2010-01-19  Romain Francois <francoisromain@free.fr>

	* configure.in: use the cxx0x.R script to discover if the
	compiler being used is c++0x capable
	* configure: regenerated from updated configure.in

	* src/Makevars.in: using CLINK_CPPFLAGS variable

	* src/Makevars.win: using CLINK_CPPFLAGS variable with the
	cxx0x.R discovery script

2010-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R: Rewrote logic for LdFlags() to decide when linking
	  is static: default now is everywhere but Linux, and choices can be
	  overriden as before

2010-01-18  Romain Francois <francoisromain@free.fr>

	* inst/discovery/cxx0x.R: replaces the cxx0x.c file to take
	care of compiling, etc...

2010-01-17  Romain Francois <francoisromain@free.fr>

	* src/exceptions.cpp: slightly less dumb exception logic